--- a/index.html
+++ b/index.html
@@ -9,51 +9,20 @@
 
   <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = () => (
-      <h3 id="title" onMouseEnter={() => console.log("mouseEnter")}>
-        Hello I'm a h3
-      </h3>
-    );
-
-    const Button = () => (
-      <button
-        onClick={() => console.log("Im clicked")}
-        style={{ backgroundColor: "tomato" }}
-      >
-        Click me
-      </button>
-    );
-
-    // const container = React.createElement("div", null, [Title, Button]);
+    let counter = 0;
+    function couterUp() {
+      counter = counter + 1;
+      reRender();
+    }
+    function reRender() {
+      ReactDOM.render(<Container />, root);
+    }
     const Container = () => (
       <div>
-        <Title /> <Button />
+        <h3>Toal clicks: {counter}</h3>
+        <button onClick={couterUp}>Click me</button>
       </div>
     );
-    ReactDOM.render(<Container />, root);
-
-    /*
-     const h3 = React.createElement(
-       "h3",
-       {
-         id: "title",
-         onMouseEnter: () => console.log("mouseEnter"),
-       },
-       "Hello I'm a h3"
-     ); //createElement 파라메터 값으로 생성하고자 하는 html 태그와 똑같은 이름을 사용해야함
-     */
-    // const btn = React.createElement(
-    //   "button",
-    //   {
-    //     onClick: () => console.log("Im clicked"),
-    //     style: {
-    //       backgroundColor: "tomato",
-    //     },
-    //   },
-    //   "Click me"
-    // );
-
-    // ReactDOM.render(span, root);
-    // ReactDOM.render(btn, root);
+    reRender();
   </script>
 </html>
