--- a/index.html
+++ b/index.html
@@ -9,20 +9,47 @@
 
   <script type="text/babel">
     const root = document.getElementById("root");
-    let counter = 0;
-    function couterUp() {
-      counter = counter + 1;
-      reRender();
+    function App() {
+      const [amount, setAmount] = React.useState(0);
+      const [inverted, setInverted] = React.useState(false);
+      const onChange = (event) => {
+        setAmount(event.target.value);
+      };
+      const reset = () => setAmount(0);
+      const onFilp = () => {
+        reset();
+        setInverted((current) => !current);
+      };
+      return (
+        <div>
+          <h1>Super Conberter</h1>
+          <div>
+            <label htmlFor="minutes"> Minutes </label>
+            <input
+              value={inverted ? amount * 60 : amount}
+              id="minutes"
+              placeholder="Minutes"
+              type="number"
+              onChange={onChange}
+              disabled={inverted}
+            />
+          </div>
+          <div>
+            <label htmlFor="Hours"> Hours </label>
+            <input
+              value={inverted ? amount : Math.round(amount / 60)}
+              id="Hours"
+              placeholder="Hours"
+              type="number"
+              disabled={!inverted}
+              onChange={onChange}
+            />
+          </div>
+          <button onClick={reset}>reset</button>
+          <button onClick={onFilp}>{inverted ? "Turn Back" : "Invert"}</button>
+        </div>
+      );
     }
-    function reRender() {
-      ReactDOM.render(<Container />, root);
-    }
-    const Container = () => (
-      <div>
-        <h3>Toal clicks: {counter}</h3>
-        <button onClick={couterUp}>Click me</button>
-      </div>
-    );
-    reRender();
+    ReactDOM.render(<App />, root);
   </script>
 </html>
