--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script type="text/babel">
-    const root = document.getElementById("root");
-    function App() {
+    function MinutesToHours() {
+      const root = document.getElementById("root");
       const [amount, setAmount] = React.useState(0);
       const [inverted, setInverted] = React.useState(false);
       const onChange = (event) => {
@@ -22,7 +22,6 @@
       };
       return (
         <div>
-          <h1>Super Conberter</h1>
           <div>
             <label htmlFor="minutes"> Minutes </label>
             <input
@@ -47,6 +46,62 @@
           </div>
           <button onClick={reset}>reset</button>
           <button onClick={onFilp}>{inverted ? "Turn Back" : "Invert"}</button>
+        </div>
+      );
+    }
+    function KmtoMiles() {
+      const [amount, setAmount] = React.useState(0);
+      const [invert, setInvert] = React.useState(false);
+      const onChange = (event) => {
+        setAmount(event.target.value);
+      };
+      const reset = () => {
+        setAmount(0);
+      };
+      const onInvert = () => {
+        reset();
+        setInvert((current) => !current);
+      };
+      return (
+        <div>
+          <div>
+            <label htmlFor="km">Km</label>
+            <input
+              value={invert ? Math.round(amount * 1.60934) : amount}
+              id="km"
+              onChange={onChange}
+              disabled={invert}
+            ></input>
+          </div>
+          <div>
+            <label htmlFor="miles">Miles</label>
+            <input
+              value={invert ? amount : Math.round(amount * 0.62137)}
+              id="miles"
+              onChange={onChange}
+              disabled={!invert}
+            ></input>
+          </div>
+          <button onClick={reset}>reset</button>
+          <button onClick={onInvert}>Invert</button>
+        </div>
+      );
+    }
+    function App() {
+      const [index, setIndex] = React.useState("1");
+      const onSelect = (event) => {
+        setIndex(event.target.value);
+      };
+      return (
+        <div>
+          <h1>Super Conberter</h1>
+          <select value={index} onChange={onSelect}>
+            <option value="0">Minutes & Hours</option>
+            <option value="1">Km & KmtoMiles</option>
+          </select>
+          <hr />
+          {index === "0" ? <MinutesToHours /> : null}
+          {index === "1" ? <KmtoMiles /> : null}
         </div>
       );
     }
